--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         .item input[type="number"] {
             width: 60px;
         }
-        #add-item-button, #config-button {
+        #add-item-button, #remove-item-button, #config-button, #remove-ok-button {
             display: inline-block;
             margin-top: 20px;
             padding: 10px 20px;
@@ -111,13 +111,25 @@
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
-        #add-item-button:hover, #config-button:hover {
+        #add-item-button:hover, #remove-item-button:hover, #config-button:hover, #remove-ok-button:hover {
             background-color: #002244;
         }
         #config-button {
             position: fixed;
             right: 20px;
             bottom: 20px;
+        }
+        #remove-item-input {
+            display: none;
+            margin-top: 10px;
+            padding: 10px;
+            border: 2px solid #003366;
+            border-radius: 5px;
+            width: 200px;
+        }
+        #remove-ok-button {
+            display: none;
+            margin-left: 10px;
         }
         #config-panel {
             display: none;
@@ -160,6 +172,9 @@
                 <!-- Itens serão inseridos dinamicamente aqui -->
             </div>
             <button id="add-item-button" onclick="addItem()">Adicionar Produto</button>
+            <button id="remove-item-button" onclick="showRemoveInput()">Remover Produto</button>
+            <input type="text" id="remove-item-input" placeholder="Nome do produto...">
+            <button id="remove-ok-button" onclick="removeItem()">OK</button>
         </div>
 
         <div id="notifications">
@@ -200,6 +215,46 @@
         configContainer.appendChild(newConfig);
 
         updateNotifications();
+    }
+
+    // Função para mostrar caixa de remover produto
+    function showRemoveInput() {
+        document.getElementById('remove-item-input').style.display = 'inline-block';
+        document.getElementById('remove-ok-button').style.display = 'inline-block';
+    }
+
+    // Função para remover o produto da lista e das configurações
+    function removeItem() {
+        const productName = document.getElementById('remove-item-input').value.toLowerCase();
+        const items = document.querySelectorAll('#items-container .item');
+        const configItems = document.querySelectorAll('#config-container .config-item');
+        let found = false;
+
+        // Remover da lista de itens
+        items.forEach(item => {
+            const currentProductName = item.querySelector('input[type="text"]').value.toLowerCase();
+            if (currentProductName === productName) {
+                item.remove();  // Remove o item da lista
+                found = true;
+            }
+        });
+
+        // Remover da configuração de quantidade mínima
+        configItems.forEach(configItem => {
+            const label = configItem.querySelector('label').innerText.toLowerCase();
+            if (label.includes(productName)) {
+                configItem.remove();  // Remove a configuração correspondente
+            }
+        });
+
+        if (found) {
+            // Esconder caixa de texto e botão OK
+            document.getElementById('remove-item-input').style.display = 'none';
+            document.getElementById('remove-ok-button').style.display = 'none';
+            document.getElementById('remove-item-input').value = '';  // Limpa o campo de texto
+        } else {
+            alert('Produto não encontrado!');
+        }
     }
 
     // Função para atualizar notificações
