--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         const itemList = document.getElementById('items-container');
         const newItem = document.createElement('div');
         newItem.classList.add('item');
-        newItem.innerHTML = `<input type="text" value="Produto ${itemCount}" onchange="updateNotifications()">
+        newItem.innerHTML = `<input type="text" value="Produto ${itemCount}" onchange="updateItemName(${itemCount}, this.value)">
                              <input type="number" value="0" min="0" onchange="updateNotifications()">`;
         newItem.id = `produto-${itemCount}`;
         itemList.appendChild(newItem);
@@ -210,10 +210,20 @@
         const configContainer = document.getElementById('config-container');
         const newConfig = document.createElement('div');
         newConfig.classList.add('config-item');
-        newConfig.innerHTML = `<label for="min-quantity-produto-${itemCount}">Produto ${itemCount}:</label>
+        newConfig.innerHTML = `<label id="label-produto-${itemCount}" for="min-quantity-produto-${itemCount}">Produto ${itemCount}:</label>
                                <input type="number" id="min-quantity-produto-${itemCount}" value="3" min="0" onchange="updateNotifications()">`;
         configContainer.appendChild(newConfig);
 
+        updateNotifications();
+    }
+
+    // Função para atualizar o nome do item nas configurações e notificações
+    function updateItemName(itemId, newName) {
+        // Atualizar o nome na configuração de quantidade mínima
+        const configLabel = document.getElementById(`label-produto-${itemId}`);
+        configLabel.innerText = `${newName}:`;
+
+        // Atualizar as notificações
         updateNotifications();
     }
 
@@ -255,6 +265,8 @@
         } else {
             alert('Produto não encontrado!');
         }
+
+        updateNotifications();
     }
 
     // Função para atualizar notificações
