--- a/index.html
+++ b/index.html
@@ -156,10 +156,61 @@
                 width: 100%;
             }
         }
+        /* Estilo para a página de login */
+        #login-page {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f8ff;
+        }
+        #login-box {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 300px;
+        }
+        #login-box input[type="text"], #login-box input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        #login-box button {
+            background-color: #003366;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #login-box button:hover {
+            background-color: #002244;
+        }
+        #error-message {
+            color: red;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
 
+<!-- Página de Login -->
+<div id="login-page">
+    <div id="login-box">
+        <h1>Login</h1>
+        <input type="text" id="username" placeholder="Usuário">
+        <input type="password" id="password" placeholder="Senha">
+        <button onclick="login()">Entrar</button>
+        <div id="error-message"></div>
+    </div>
+</div>
+
+<!-- Conteúdo do Site -->
+<div id="site-content" style="display:none;">
     <div id="header">
         <input id="search-bar" type="text" placeholder="Pesquisar produto..." oninput="searchProduct()">
         <h1>Decafil - Gerenciamento de Estoque</h1>
@@ -190,8 +241,23 @@
             <!-- Configurações serão inseridas dinamicamente aqui -->
         </div>
     </div>
+</div>
 
 <script>
+    // Função de login
+    function login() {
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+        const errorMessage = document.getElementById('error-message');
+
+        if (username === 'Decafil5' && password === '#Decafil2024@') {
+            document.getElementById('login-page').style.display = 'none'; // Esconder página de login
+            document.getElementById('site-content').style.display = 'block'; // Mostrar conteúdo do site
+        } else {
+            errorMessage.textContent = 'Nome de usuário ou senha incorretos!';
+        }
+    }
+
     let itemCount = 0;
 
     // Função para adicionar um novo produto
