--- a/index.html
+++ b/index.html
@@ -156,44 +156,6 @@
                 width: 100%;
             }
         }
-        /* Estilo para a página de login */
-        #login-page {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f8ff;
-        }
-        #login-box {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 300px;
-        }
-        #login-box input[type="text"], #login-box input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        #login-box button {
-            background-color: #003366;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #login-box button:hover {
-            background-color: #002244;
-        }
-        #error-message {
-            color: red;
-            margin-top: 10px;
-        }
     </style>
 </head>
 <body>
@@ -332,7 +294,7 @@
             alert('Produto não encontrado!');
         }
 
-        updateNotifications();
+        updateNotifications();  // Atualiza as notificações após a remoção do item
     }
 
     // Função para atualizar notificações
@@ -344,10 +306,14 @@
         for (let i = 0; i < items.length; i++) {
             const productName = items[i].querySelector('input[type="text"]').value;
             const quantity = parseInt(items[i].querySelector('input[type="number"]').value);
-            const minQuantity = parseInt(document.getElementById(`min-quantity-produto-${i + 1}`).value);
+            const minQuantity = document.getElementById(`min-quantity-produto-${i + 1}`);
 
-            if (quantity < minQuantity) {
-                notifications.innerHTML += `<div class="notification">Atenção: ${productName} está em falta!</div>`;
+            // Verifica se a configuração de quantidade mínima existe
+            if (minQuantity) {
+                const minQuantityValue = parseInt(minQuantity.value);
+                if (quantity < minQuantityValue) {
+                    notifications.innerHTML += `<div class="notification">Atenção: ${productName} está em falta!</div>`;
+                }
             }
         }
     }
