--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decafil - Gerenciamento de Estoque</title>
     <style>
+        /* Estilos gerais */
         body {
             background-color: #f0f8ff;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -155,6 +156,60 @@
             #item-list, #notifications {
                 width: 100%;
             }
+        }
+
+        /* Estilo da página de login */
+        #login-page {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f8ff;
+        }
+
+        #login-box {
+            background-color: white;
+            border: 2px solid #003366;
+            border-radius: 10px;
+            padding: 30px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        #login-box h1 {
+            color: #003366;
+            margin-bottom: 20px;
+        }
+
+        #login-box input[type="text"], #login-box input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        #login-box button {
+            width: 100%;
+            padding: 10px;
+            background-color: #003366;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #login-box button:hover {
+            background-color: #002244;
+        }
+
+        #error-message {
+            color: red;
+            margin-top: 10px;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -312,7 +367,7 @@
             if (minQuantity) {
                 const minQuantityValue = parseInt(minQuantity.value);
                 if (quantity < minQuantityValue) {
-                    notifications.innerHTML += `<div class="notification">Atenção: ${productName} está em falta!</div>`;
+                    notifications.innerHTML += `<div class="notification" data-product="${productName.toLowerCase()}">Atenção: ${productName} está em falta!</div>`;
                 }
             }
         }
