--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
         const configItems = document.querySelectorAll('#config-container .config-item');
         let found = false;
 
+        // Remover o item da lista de itens
         items.forEach(item => {
             const currentProductName = item.querySelector('input[type="text"]').value.trim().toLowerCase();
             if (currentProductName === productName) {
@@ -267,6 +268,7 @@
             }
         });
 
+        // Remover o item das configurações
         configItems.forEach(configItem => {
             const label = configItem.querySelector('label').innerText.trim().toLowerCase();
             if (label.includes(productName)) {
@@ -274,10 +276,19 @@
             }
         });
 
+        // Se o item foi encontrado e removido, esconde os campos de remoção
         if (found) {
             document.getElementById('remove-item-input').style.display = 'none';
             document.getElementById('remove-ok-button').style.display = 'none';
             document.getElementById('remove-item-input').value = '';
+
+            // Remover a notificação correspondente ao item
+            const notifications = document.querySelectorAll('#notifications .notification');
+            notifications.forEach(notification => {
+                if (notification.getAttribute('data-product') === productName) {
+                    notification.remove();
+                }
+            });
         } else {
             alert('Produto não encontrado!');
         }
