--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         </div>
     </div>
 
-    <!-- Importando arquivos JavaScript -->
-    <script src="js/login.js"></script>
-    <script src="js/items.js"></script>
-    <script src="js/notifications.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/addItem.js"></script>
-    <script src="js/removeItem.js"></script>
+    <!-- Importando arquivos JavaScript com defer -->
+    <script src="js/login.js" defer></script>
+    <script src="js/items.js" defer></script>
+    <script src="js/notifications.js" defer></script>
+    <script src="js/config.js" defer></script>
+    <script src="js/addItem.js" defer></script>
+    <script src="js/removeItem.js" defer></script>
 </body>
 </html>
